add google webmaster tool

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   
   <meta name="description" content="Just me">
   <link rel="canonical" href="http://torbjoern-klatt.de/">
+  
+  <meta name="google-site-verification" content="u3ZBHDqatPS5qZmnAeI1AA8LCt8I6sHyWh7U3Di34jM" />
 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/octicons/octicons.css">
